travis: switch to using docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,10 @@
-language: java
-jdk:
-  - oraclejdk8
+sudo: required
 
-# Add support for Erlang. The VM has erlang installed already but it
-# is an out of date version (older than R16B)
+services:
+  - docker
+
 before_install:
-  - mkdir bin
-  - wget -O bin/rebar https://raw.github.com/wiki/rebar/rebar/rebar
-  - chmod u+x bin/rebar
-  - export PATH="${PWD}/bin:${PATH}"
-  - sudo apt-get remove erlang erlang-base erlang-base-hipe
-  - sudo apt-get update
-  - sudo apt-get install -y libwxgtk2.8-0 libgmp-dev
-  - wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_18.0-1~debian~wheezy_amd64.deb
-  - sudo dpkg -i esl-erlang_18.0-1~debian~wheezy_amd64.deb
-  - (cd js && npm install)
+  - docker build -t project-euler .
 
-script: make compile
+script:
+  - docker run --rm project-euler make
