--- a/c/Makefile
+++ b/c/Makefile
@@ -1,7 +1,7 @@
 P=p001
 
 compile:
-	cc -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include -lgmp util.c $(P).c  -o $(P) 
+	cc $(P).c -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include `pkg-config --cflags --libs glib-2.0` -lgmp util.c -o $(P)
 
 run: compile
 	./$(P)
