c: use bin directory

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,10 +1,11 @@
 P=p001
 
 compile:
-	cc $(P).c -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include `pkg-config --cflags --libs glib-2.0` -lgmp util.c -o $(P)
+	mkdir -p bin
+	cc $(P).c -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include `pkg-config --cflags --libs glib-2.0` -lgmp util.c -o bin/$(P)
 
 run: compile
-	./$(P)
+	./bin/$(P)
 
 clean:
-	rm ./$(P)
+	rm ./bin/$(P)
