--- a/c/Makefile
+++ b/c/Makefile
@@ -2,7 +2,7 @@ P=p001
 
 compile:
 	mkdir -p bin
-	cc $(P).c -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include `pkg-config --cflags --libs glib-2.0` -lgmp util.c -o bin/$(P)
+	cc util.c $(P).c -std=c99 -Wall -O2 -L/usr/local/lib -I/usr/local/include `pkg-config --cflags --libs glib-2.0` -lgmp -o bin/$(P)
 
 run: compile
 	./bin/$(P)
